--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/lardosidosos?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=3214
 
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
