--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost/lardosidosos?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=3214
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # spring.jpa.show-sql=true
 
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.show_sql=true
+# spring.jpa.properties.hibernate.format_sql=true
