adicionado plugin para criar um serviço no linux

--- a/pom.xml
+++ b/pom.xml
@@ -94,11 +94,11 @@
 			<version>2.9.2</version>
 		</dependency>
 
-	<dependency>
-		<groupId>org.json</groupId>
-		<artifactId>json</artifactId>
-		<version>20200518</version>
-	</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
+		</dependency>
 
 	</dependencies>
 	<build>
@@ -107,6 +107,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<executable>true</executable>
+				</configuration>
+			</plugin>
 		</plugins>
+
 	</build>
 </project>
