--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.password=3214
 
 # spring.jpa.properties.hibernate.show_sql=true
 # spring.jpa.properties.hibernate.format_sql=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+
+file.upload-dir=/Users/yuris/Documents/uploadDir
