--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+## DATABASE CONNECT
 spring.datasource.url=jdbc:mysql://localhost/lardosidosos?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=3214
@@ -7,9 +8,11 @@ spring.datasource.password=3214
 # spring.jpa.properties.hibernate.show_sql=true
 # spring.jpa.properties.hibernate.format_sql=true
 
+## HIBERNATE LOGGING
+logging.level.org.hibernate.SQL= DEBUG
+
+## MULTIPART (MultipartProperties)
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
-
-file.upload-dir=/Users/yuris/Documents/uploadDir
