correções do sprint 1.1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## DATABASE CONNECT
-spring.datasource.url=jdbc:mysql://db-lardosidosos:3306/lardosidosos?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
-spring.datasource.username=yuris
+spring.datasource.url=jdbc:mysql://localhost:3306/lardosidosos?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
 spring.datasource.password=3214
 
 #spring.jpa.show-sql=true
