--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-## DATABASE CONNECT
+## DATABASE CONNECT LOCALHOST
+#spring.datasource.url=jdbc:mysql://localhost:3306/lardosidosos?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=3214
+
+## DATABASE CONNECT AWS RDS DEV
 spring.datasource.url=jdbc:mysql://database-1.cdpyvbsscjsc.us-east-1.rds.amazonaws.com:3306/lardosidosos?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=321456789
