--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## DATABASE CONNECT LOCALHOST
 spring.datasource.url=jdbc:mysql://localhost:3306/lardosidosos?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=3214
+spring.datasource.password=abcd
 
 ## DATABASE CONNECT AWS RDS DEV
 #spring.datasource.url=jdbc:mysql://database-1.cdpyvbsscjsc.us-east-1.rds.amazonaws.com:3306/lardosidosos?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
