--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
 			<optional>true</optional>
 		</dependency>
 		
-<!-- 		<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
@@ -142,7 +142,7 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.7.0</version>
-		</dependency> -->
+		</dependency>
 		
 	</dependencies>
 	<build>
